Use diamonds
- Remove redundant parentheses
- Use valueOf()